Changed header items with h1 anchor

--- a/develop/index.html
+++ b/develop/index.html
@@ -10,11 +10,14 @@
 <body>
     <header>
         <h1>
-            <a href="index.html">"Hori<span class="seo">seo</span>n
+            <a href="index.html">"Hori<span class="seo">seo</span>n</a>
         </h1>
         <nav>
+            <!-- Unordered list element -->
             <ul>
+                <!-- List element -->
                 <li>
+                    <!-- Anchor element -->
                     <a href="#search-engine-optimization">Search Engine Optimization</a>
                 </li>
                 <li>
@@ -26,7 +29,8 @@
             </ul>
         </nav>
     </header>
-    </div>
+
+    <!-- hero/jumbotron -->
     <div class="hero"></div>
     <div class="content">
         <div class="search-engine-optimization">
