separated hero from content

--- a/develop/index.html
+++ b/develop/index.html
@@ -31,7 +31,11 @@
     </header>
 
     <!-- hero/jumbotron -->
-    <div class="hero"></div>
+    <div class="hero">
+    </div>
+    <!-- end hero -->
+   
+    <!-- content section -->
     <div class="content">
         <div class="search-engine-optimization">
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left" />
