--- a/develop/index.html
+++ b/develop/index.html
@@ -13,11 +13,8 @@
             <a href="index.html">Hori<span class="seo">seo</span>n</a>
         </h1>
         <nav>
-            <!-- Unordered list element -->
             <ul>
-                <!-- List element -->
                 <li>
-                    <!-- Anchor element -->
                     <a href="#search-engine-optimization">Search Engine Optimization</a>
                 </li>
                 <li>
@@ -30,13 +27,13 @@
         </nav>
     </header>
 
-    <!-- hero/jumbotron -->
+    <!-- Hero/Jumbotron -->
     <section class="hero">
     </section>
-    <!-- end hero -->
+    <!-- End Hero -->
    
-    <!-- "search-engine-optimization" section -->
-    <section>
+    <!-- "Content" Section Starts -->
+    <section class=content>
         <div id="search-engine-optimization" class="search-engine-optimization">
             <img src="./assets/images/search-engine-optimization.jpg" alt="" class="float-left" />
             <h2 class="section-title primary-border">Search Engine Optimization</h2>
@@ -46,7 +43,6 @@
                 your visibility and find the right customers for your business.
             </p>
         </div>
-    </section>
         <div id="online-reputation-management" class="online-reputation-management">
             <img src="./assets/images/online-reputation-management.jpg" alt="" class="float-right" />
             <h2>Online Reputation Management</h2>
@@ -65,8 +61,11 @@
                 increase your lead generation.
             </p>
         </div>
-    </div>
-    <div class="benefits">
+    </section>
+    <!-- "Content" Section Ends -->
+
+    <!-- "Benefits" Section Begins -->
+    <section class="benefits">
         <div class="benefit-lead">
             <h3>Lead Generation</h3>
             <img src="./assets/images/lead-generation.png" alt="" />
@@ -91,7 +90,9 @@
                 need to advertise your page.
             </p>
         </div>
-    </div>
+    </section>
+    <!-- "Benefits" Section Ends -->
+
     <footer>
         <h2>Made with ❤️️ by Horiseon</h2>
         <p>
