modified contents section html and css

--- a/develop/index.html
+++ b/develop/index.html
@@ -31,19 +31,19 @@
     <section class="hero">
     </section>
     <!-- End Hero -->
-   
-    <!-- "Content" Section Starts -->
-    <section class=content>
-        <div id="search-engine-optimization" class="search-engine-optimization">
+
+    <!-- "Contents" Section Starts -->
+    <div class="contents">
+        <div id="search-engine-optimization" class="content-title">
             <img src="./assets/images/search-engine-optimization.jpg" alt="" class="float-left" />
-            <h2 class="section-title primary-border">Search Engine Optimization</h2>
+            <h2>Search Engine Optimization</h2>
             <p>
                 The dominance of mobile internet use means that users are searching for the right business as they
                 travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase
                 your visibility and find the right customers for your business.
             </p>
         </div>
-        <div id="online-reputation-management" class="online-reputation-management">
+        <div id="online-reputation-management" class="content-title">
             <img src="./assets/images/online-reputation-management.jpg" alt="" class="float-right" />
             <h2>Online Reputation Management</h2>
             <p>
@@ -52,7 +52,7 @@
                 you the control over what potential customers see when they search for your business.
             </p>
         </div>
-        <div id="social-media-marketing" class="social-media-marketing">
+        <div id="social-media-marketing" class="content-title">
             <img src="./assets/images/social-media-marketing.jpg" alt="" class="float-left" />
             <h2>Social Media Marketing</h2>
             <p>
@@ -61,8 +61,8 @@
                 increase your lead generation.
             </p>
         </div>
-    </section>
-    <!-- "Content" Section Ends -->
+    </div>
+    <!-- "Contents" Section Ends -->
 
     <!-- "Benefits" Section Begins -->
     <section class="benefits">
@@ -96,7 +96,7 @@
     <footer>
         <h2>Made with ❤️️ by Horiseon</h2>
         <p>
-        &copy; 2019 Horiseon Social Solution Services, Inc.
+            &copy; 2019 Horiseon Social Solution Services, Inc.
         </p>
     </footer>
 </body>
