Modified benefits style

--- a/develop/index.html
+++ b/develop/index.html
@@ -33,7 +33,7 @@
     <!-- End Hero -->
 
     <!-- "Contents" Section Starts -->
-    <div class="contents">
+    <section class="contents">
         <div id="search-engine-optimization" class="content-title">
             <img src="./assets/images/search-engine-optimization.jpg" alt="" class="float-left" />
             <h2>Search Engine Optimization</h2>
@@ -61,12 +61,12 @@
                 increase your lead generation.
             </p>
         </div>
-    </div>
+    </section>
     <!-- "Contents" Section Ends -->
 
     <!-- "Benefits" Section Begins -->
     <section class="benefits">
-        <div class="benefit-lead">
+        <div class="benefit-title">
             <h3>Lead Generation</h3>
             <img src="./assets/images/lead-generation.png" alt="" />
             <p>
@@ -74,7 +74,7 @@
                 to your website.
             </p>
         </div>
-        <div class="benefit-brand">
+        <div class="benefit-title">
             <h3>Brand Awareness</h3>
             <img src="./assets/images/brand-awareness.png" alt="" />
             <p>
@@ -82,7 +82,7 @@
                 for your business.
             </p>
         </div>
-        <div class="benefit-cost">
+        <div class="benefit-title">
             <h3>Cost Management</h3>
             <img src="./assets/images/cost-management.png" alt="" />
             <p>
